--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,13 @@ body {
   padding: 0;
 }
 
-header {
-  height: 100vh;
-  overflow: hidden;
-}
-
-header nav {
+nav {
+  background-color: #323539;
+  top: 0;
+  position: -webkit-sticky;
+  position: sticky;
+  -webkit-box-shadow: 2px 2px 20px 0px rgba(10, 10, 10, 0.3);
+          box-shadow: 2px 2px 20px 0px rgba(10, 10, 10, 0.3);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -24,16 +25,32 @@ header nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 8vh;
+  height: 9vh;
 }
 
-header nav .brand h4 {
-  font-weight: 'Righteous';
-  font-weight: bold;
+nav .brand {
+  -webkit-box-shadow: 2px 2px 20px 0px rgba(0, 0, 0, 0.5);
+          box-shadow: 2px 2px 20px 0px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  border: 2px #d72323 solid;
+  margin: 1em 0;
+}
+
+nav .brand a {
+  text-decoration: none;
+}
+
+nav .brand h4 {
+  font-family: 'Righteous';
+  letter-spacing: 1px;
+  padding: 0.2rem 0.3rem;
+  font-size: 2.2rem;
+  font-weight: bolder;
+  color: #d72323;
   margin-bottom: 0;
 }
 
-header nav .nav-links {
+nav .nav-links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -48,20 +65,38 @@ header nav .nav-links {
   list-style: none;
 }
 
-header nav .nav-links a {
-  font-weight: bold;
+nav .nav-links a {
   font-size: 1.2rem;
-  letter-spacing: 3px;
+  font-weight: bold;
+  letter-spacing: 2px;
   color: #f1ecec;
   text-decoration: none;
 }
 
-header nav .nav-links a:hover {
+nav .nav-links a:hover {
   color: #fffdfdb7;
 }
 
-header nav .nav-links .contact-link {
+nav .nav-links #contactLink a {
+  font-size: 1.3rem;
   color: #d72323;
+  border-radius: 20px;
+  padding: 0.4rem 0.6rem;
+  border: 2px solid transparent;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+nav .nav-links #contactLink a:hover {
+  padding: 0.4rem 0.6rem;
+  border-radius: 20px;
+  border: 2px solid #ff3232;
+  color: #ff3232;
+}
+
+header {
+  height: 91vh;
+  overflow: hidden;
 }
 
 header .jumbotron {
@@ -87,7 +122,7 @@ header .jumbotron .container {
           align-items: center;
   height: 100%;
   min-width: 100%;
-  background-color: rgba(0, 0, 0, 0.65);
+  background-color: rgba(0, 0, 0, 0.55);
   text-shadow: 3px 3px 5px black;
 }
 
@@ -101,7 +136,7 @@ header .jumbotron .container h1 {
   padding-left: 30px;
   -ms-flex-item-align: start;
       align-self: flex-start;
-  font-family: 'Righteous';
+  font-family: "Righteous";
 }
 
 header .jumbotron .container p {
@@ -129,6 +164,6 @@ header .jumbotron .container a i:hover {
 }
 
 section {
-  height: 100vh;
+  height: 91vh;
 }
 /*# sourceMappingURL=styles.css.map */
