--- a/styles.scss
+++ b/styles.scss
@@ -199,6 +199,7 @@ section {
     justify-content: center;
 
     h4 {
+      font-family: 'Space Mono';
       margin-top: 0.2rem;
       font-size: 3rem;
       text-align: center;
