--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,13 @@ body {
 }
 
 nav {
-  background-color: #323539;
+  background: -webkit-gradient(linear, right top, left top, from(#131313), to(#303030));
+  background: linear-gradient(to left, #131313, #303030);
   top: 0;
   position: -webkit-sticky;
   position: sticky;
-  -webkit-box-shadow: 2px 2px 20px 0px rgba(10, 10, 10, 0.3);
-          box-shadow: 2px 2px 20px 0px rgba(10, 10, 10, 0.3);
+  -webkit-box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
+          box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -35,7 +36,7 @@ nav .brand {
   -webkit-box-shadow: 2px 2px 20px 0px rgba(0, 0, 0, 0.5);
           box-shadow: 2px 2px 20px 0px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
-  border: 2px #d72323 solid;
+  border: 2px #e03a3a solid;
   margin: 1em 0;
 }
 
@@ -49,7 +50,7 @@ nav .brand h4 {
   padding: 0.2rem 0.3rem;
   font-size: 2.2rem;
   font-weight: bolder;
-  color: #d72323;
+  color: #e03a3a;
   margin-bottom: 0;
 }
 
@@ -68,9 +69,16 @@ nav .nav-links {
   list-style: none;
 }
 
+nav .nav-links li:hover {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
 nav .nav-links a {
   font-family: 'Space Mono';
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: bold;
   letter-spacing: 2px;
   color: #f1ecec;
@@ -78,13 +86,14 @@ nav .nav-links a {
 }
 
 nav .nav-links a:hover {
-  color: #fffdfdb7;
+  color: #fffdfdf3;
+  text-shadow: 3px 3px 5px #1d1d1d;
 }
 
 nav .nav-links #contactLink a {
   font-weight: bolder;
-  font-size: 1.3rem;
-  color: #d72323;
+  font-size: 1.2rem;
+  color: #ff3232;
   border-radius: 20px;
   padding: 0.4rem 0.6rem;
   border: 2px solid transparent;
@@ -93,10 +102,13 @@ nav .nav-links #contactLink a {
 }
 
 nav .nav-links #contactLink a:hover {
+  background-color: #ff3232;
   padding: 0.4rem 0.6rem;
-  border-radius: 20px;
+  border-radius: 25px;
   border: 2px solid #ff3232;
-  color: #ff3232;
+  color: #fffdfdf3;
+  -webkit-box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
+          box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
 }
 
 header {
@@ -129,13 +141,13 @@ header .jumbotron .container {
   height: 100%;
   min-width: 100%;
   background-color: rgba(0, 0, 0, 0.55);
-  text-shadow: 3px 3px 5px black;
+  text-shadow: 3px 3px 5px #1d1d1d;
 }
 
 header .jumbotron .container span {
   font-family: 'Space Mono';
   font-size: 1em;
-  color: #d72323;
+  color: #e03a3a;
   text-transform: uppercase;
 }
 
@@ -164,14 +176,68 @@ header .jumbotron .container a i {
 }
 
 header .jumbotron .container a i:hover {
-  color: #d72323;
+  color: #e03a3a;
   -webkit-transform: scale(1.5);
           transform: scale(1.5);
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
-section {
+.filler {
+  background: -webkit-gradient(linear, left top, right top, from(#131313), color-stop(#303030), to(#131313));
+  background: linear-gradient(to right, #131313, #303030, #131313);
+  color: #f1ecec;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 40vh;
+  margin: 0;
+  -webkit-box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
+          box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
+  text-shadow: 5px 5px 6px black;
+}
+
+.filler .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.filler .container p {
+  font-style: italic;
+  font-family: 'Roboto';
+  font-weight: bold;
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+.filler .container .blockquote-footer {
+  color: #f1ececa8;
+  font-size: 1.5rem;
+}
+
+#section1 {
+  padding-top: 9vh;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.75)), to(rgba(0, 0, 0, 0.75))), url(./images/section1bg.png) no-repeat center;
   background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(./images/section1bg.png) no-repeat center;
   background-attachment: fixed;
@@ -183,11 +249,11 @@ section {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 91vh;
+  min-height: 91vh;
 }
 
-section .container {
-  margin-top: 0;
+#section1 .container {
+  margin-top: 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -200,29 +266,97 @@ section .container {
           justify-content: center;
 }
 
-section .container h4 {
+#section1 .container h4 {
   font-family: 'Space Mono';
   margin-top: 0.2rem;
   font-size: 3rem;
   text-align: center;
+  text-shadow: 3px 3px 5px #1d1d1d;
 }
 
-section .container .underline {
+#section1 .container h4 span {
+  font-size: 1em;
+  color: #e03a3a;
+  text-transform: uppercase;
+}
+
+#section1 .container .underline {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  border-bottom: 2px solid #d72323;
+  border-bottom: 2px solid #e03a3a;
   width: 30%;
   margin-bottom: 3rem;
 }
 
-section .container .about-1 {
+#section1 .container .about {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 1.5rem 0;
+  -webkit-box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
+          box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
 }
 
-section .container .about-1 img {
+#section1 .container .about .about-text {
+  text-shadow: 3px 3px 5px #302f2f;
+  background-color: rgba(180, 168, 168, 0.466);
+  padding: 0 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#section1 .container .about .about-text h3 {
+  letter-spacing: 2px;
+  font-weight: bolder;
+  color: #e03a3a;
+  font-family: 'Roboto';
+  border-bottom: thin double;
+}
+
+#section1 .container .about .about-text p {
+  text-align: center;
+  font-weight: 400;
+}
+
+#section1 .container .about .about-text .btn {
+  font-weight: bolder;
+  font-size: 1.2rem;
+  color: #ff3232;
+  border-radius: 25px;
+  padding: 0.4rem 0.6rem;
+  border: 2px solid #e03a3a;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+#section1 .container .about .about-text .btn span {
+  margin: 0 3px;
+  display: inline-block;
+}
+
+#section1 .container .about .about-text .btn:hover {
+  background-color: #ff3232;
+  padding: 0.4rem 0.6rem;
+  border-radius: 25px;
+  border: 2px solid #ff3232;
+  color: #fffdfdf3;
+  -webkit-box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
+          box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
+}
+
+#section1 .container .about img {
   height: 100%;
   width: 50%;
 }
