--- a/styles.scss
+++ b/styles.scss
@@ -1,16 +1,6 @@
-$colors: (primary: #000000,
-  accent1: #d72323,
-  accent2: #323539,
-  textColor: #f1ecec,
-  linkHover: #fffdfdb7,
-  linkHover2: #ff3232);
+@import "./config";
 
 
-@function color($color-name) {
-  @return map-get($colors, $color-name)
-}
-
-;
 
 * {
   margin: 0;
@@ -30,10 +20,11 @@ body {
 }
 
 nav {
-  background-color: color(accent2);
+  // background: linear-gradient(to left, #232526, #414345);
+  background: linear-gradient(to left, #131313, #303030);
   top: 0;
   position: sticky;
-  box-shadow: 2px 2px 20px 0px rgba(10, 10, 10, 0.3);
+  box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -71,18 +62,26 @@ nav {
     margin-bottom: 0;
     list-style: none;
 
+    li:hover {
+      transition: all 0.3s ease-in-out;
+      transform: scale(1.1);
+    }
+
+
     a {
       font-family: 'Space Mono';
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       font-weight: bold;
       letter-spacing: 2px;
       color: color(textColor);
       text-decoration: none;
+     
 
 
 
       &:hover {
         color: color(linkHover);
+        text-shadow: $text-shadow;
       }
 
     }
@@ -90,18 +89,20 @@ nav {
     #contactLink {
       a {
         font-weight: bolder;
-        font-size: 1.3rem;
-        color: color(accent1);
+        font-size: 1.2rem;
+        color: color(linkHover2);
         border-radius: 20px;
         padding: 0.4rem 0.6rem;
         border: 2px solid transparent;
         transition: all 0.5s ease-in-out;
 
         &:hover {
+          background-color: color(linkHover2);
           padding: 0.4rem 0.6rem;
-          border-radius: 20px;
+          border-radius: 25px;
           border: 2px solid color(linkHover2);
-          color: color(linkHover2);
+          color: color(linkHover);
+          box-shadow: 10px 12px 16px -7px rgba(0,0,0,0.68);
         }
       }
     }
@@ -134,7 +135,7 @@ header {
       height: 100%;
       min-width: 100%;
       background-color: rgba(#000000, $alpha: 0.55);
-      text-shadow: 3px 3px 5px black;
+      text-shadow: $text-shadow;
 
       span {
         font-family: 'Space Mono';
@@ -181,8 +182,43 @@ header {
   }
 }
 
+.filler {
+  background: linear-gradient(to right, #131313, #303030,#131313);
+  color: color(textColor);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 40vh;
+  margin: 0;
+  box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
+  text-shadow: 5px 5px 6px rgb(0,0,0);
+ 
 
-section {
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    p{
+    font-style: italic;
+    font-family: 'Roboto';
+    font-weight: bold;
+    text-align: center;
+    font-size: 1.5rem;
+    } 
+
+    .blockquote-footer {
+    color: #f1ececa8;
+    font-size: 1.5rem;
+    }
+  }
+}
+
+
+#section1 {
+  padding-top: 9vh;
   background: linear-gradient(rgba(0, 0, 0, 0.75),
       rgba(0, 0, 0, 0.75)), url(./images/section1bg.png) no-repeat center;
   background-attachment: fixed;
@@ -190,10 +226,11 @@ section {
   width: 100%;
   display: flex;
   justify-content: center;
-  height: 91vh;
+  min-height: 91vh;
 
   .container {
-    margin-top: 0;
+    
+    margin-top: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -203,6 +240,16 @@ section {
       margin-top: 0.2rem;
       font-size: 3rem;
       text-align: center;
+      text-shadow: $text-shadow;
+
+      span {
+        font-size: 1em;
+        color: color(accent1);
+        text-transform: uppercase;
+       
+      }
+
+
     }
 
     .underline {
@@ -212,9 +259,61 @@ section {
       margin-bottom: 3rem;
     }
 
-    .about-1 {
-
+    .about {
       display: flex;
+      margin: 1.5rem 0;
+      box-shadow: 10px 12px 16px -7px rgba(0,0,0,0.68);
+
+
+      .about-text {
+        text-shadow: 3px 3px 5px rgb(48, 47, 47);
+        background-color: rgba(180, 168, 168, 0.466);
+        padding: 0 2em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        h3 {
+          letter-spacing: 2px;
+          font-weight: bolder;
+          color: color(accent1);
+          font-family: 'Roboto';
+          border-bottom:thin double;
+        }
+
+        p {
+          text-align: center;
+          font-weight: 400;
+        }
+
+        .btn {
+          font-weight: bolder;
+          font-size: 1.2rem;
+          color: color(linkHover2);
+          border-radius: 25px;
+          padding: 0.4rem 0.6rem;
+          border: 2px solid color(accent1);
+          transition: all 0.5s ease-in-out;
+
+          span {
+            margin: 0 3px;
+            display: inline-block;
+          }
+        
+  
+
+          &:hover {
+            background-color: color(linkHover2);
+            padding: 0.4rem 0.6rem;
+            border-radius: 25px;
+            border: 2px solid color(linkHover2);
+            color: color(linkHover);
+            box-shadow: 10px 12px 16px -7px rgba(0,0,0,0.68);
+          }
+        }
+         
+      }
 
 
       img {
@@ -223,10 +322,6 @@ section {
       }
 
     }
-
-    .about-2 {}
-
-    .about-3 {}
 
   }
 }
