edited pricing plans

--- a/_config.scss
+++ b/_config.scss
@@ -23,7 +23,7 @@ $text-shadow: 3px 3px 5px rgb(29, 29, 29);
 
 
 h4 {
-    font-family: 'Space Mono';
+    font-family: 'Quicksand';
     margin-top: 0.2rem;
     font-size: 3rem;
     text-align: center;
