--- a/_media.scss
+++ b/_media.scss
@@ -2,6 +2,38 @@
     * {
      font-size: 13px;
       }
+
+      .about-img1 {
+       display: none;
+         }
+
+      .about-img2 {
+       display: none;
+         }
+
+      .about-img2 {
+       display: none;
+         }
+
+      .about {
+          .about-text {
+              width: 100% !important;
+          }
+      }
+
+      .btn {
+        background-color: color(accent1);
+        border: 2px solid color(accent1);
+
+        span {
+          color: color(textColor);
+        }
+      }
+     
+     
+    
+
+      
   
   
   }
