--- a/styles.scss
+++ b/styles.scss
@@ -48,7 +48,7 @@ nav {
 
 
     h4 {
-      font-family: 'Space Mono';
+      font-family: 'Quicksand';
       letter-spacing: 1.5px;
       padding: 0.2rem 0.3rem;
       font-size: 1.8rem;
@@ -73,7 +73,7 @@ nav {
 
 
     a {
-      font-family: 'Space Mono';
+      font-family: 'Quicksand';
       font-size: 1.2rem;
       font-weight: bold;
       letter-spacing: 2px;
@@ -142,7 +142,7 @@ header {
       text-shadow: $text-shadow;
 
       span {
-        font-family: 'Space Mono';
+        font-family: 'Quicksand';
         font-size: 1em;
         color: color(accent1);
         text-transform: uppercase;
@@ -241,7 +241,7 @@ header {
     justify-content: center;
 
     h4 {
-      font-family: 'Space Mono';
+      font-family: 'Quicksand';
       margin-top: 0.2rem;
       font-size: 3rem;
       text-align: center;
@@ -429,6 +429,8 @@ header {
           }
         }
 
+    
+
         .price {
         
           p {
@@ -456,7 +458,7 @@ header {
           color: color(textColor);
           margin-bottom: 1rem;
           padding: 0.5rem 1.5rem;
-          border: 2px solid red;
+          border: 2px solid color(accent1);
           border-radius: 1.5em;
           background-color: color(accent1);
           transition: 0.3s ease;
@@ -465,12 +467,15 @@ header {
             transform: scale(1.05);
             background-color: color(linkHover2);
             text-decoration: none;
-
-           ;
           }
         }
       }
     }
+  .popular {
+    background-color: rgba(187, 178, 178, 0.65) !important;
+  }
   }
 }
+
+
 
