--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   margin-bottom: 3rem;
 }
 
-h4, #pricing .container h4 {
+h4, #pricing .container h4, #contact .container h4 {
   font-family: 'Quicksand';
   margin-top: 0.2rem;
   font-size: 3rem;
@@ -19,6 +19,60 @@ span {
   font-size: 1em;
   color: #e03a3a;
   text-transform: uppercase;
+}
+
+input::-webkit-input-placeholder {
+  color: #f1ecec !important;
+  opacity: 0.6 !important;
+}
+
+input:-ms-input-placeholder {
+  color: #f1ecec !important;
+  opacity: 0.6 !important;
+}
+
+input::-ms-input-placeholder {
+  color: #f1ecec !important;
+  opacity: 0.6 !important;
+}
+
+input::placeholder {
+  color: #f1ecec !important;
+  opacity: 0.6 !important;
+}
+
+textarea::-webkit-input-placeholder {
+  color: #f1ecec !important;
+  opacity: 0.6 !important;
+}
+
+textarea:-ms-input-placeholder {
+  color: #f1ecec !important;
+  opacity: 0.6 !important;
+}
+
+textarea::-ms-input-placeholder {
+  color: #f1ecec !important;
+  opacity: 0.6 !important;
+}
+
+textarea::placeholder {
+  color: #f1ecec !important;
+  opacity: 0.6 !important;
+}
+
+@-webkit-keyframes autofill {
+  0%, 100% {
+    color: #f1ecec;
+    background: #323539;
+  }
+}
+
+input:-webkit-autofill {
+  -webkit-animation-delay: 1s;
+  /* Safari support - any positive time runs instantly */
+  -webkit-animation-name: autofill;
+  -webkit-animation-fill-mode: both;
 }
 
 @media screen and (max-width: 700px) {
@@ -95,7 +149,7 @@ nav .brand a {
   text-decoration: none;
 }
 
-nav .brand h4, nav .brand #pricing .container h4, #pricing .container nav .brand h4 {
+nav .brand h4, nav .brand #pricing .container h4, #pricing .container nav .brand h4, nav .brand #contact .container h4, #contact .container nav .brand h4 {
   font-family: 'Quicksand';
   letter-spacing: 1.5px;
   padding: 0.2rem 0.3rem;
@@ -575,5 +629,96 @@ header .jumbotron .container a i:hover {
 
 #pricing .container .popular {
   background-color: rgba(187, 178, 178, 0.65) !important;
+}
+
+#contact {
+  padding-top: 9vh;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.75)), to(rgba(0, 0, 0, 0.75))), url(./images/contact-pexels.png) no-repeat center;
+  background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(./images/contact-pexels.png) no-repeat center;
+  background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 100vh;
+}
+
+#contact .container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 20px;
+}
+
+#contact .container h5 {
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
+#contact .container h5 strong {
+  font-size: 1.7rem;
+}
+
+#contact .container .underline {
+  margin-bottom: 1rem;
+}
+
+#contact .container .contact-form {
+  background-color: rgba(187, 178, 178, 0.5) !important;
+  -webkit-box-shadow: 2px 2px 10px #585858bb;
+          box-shadow: 2px 2px 10px #585858bb;
+}
+
+#contact .container .contact-form form {
+  padding: 3rem;
+}
+
+#contact .container .contact-form form input {
+  border-color: #e03a3a;
+  color: #f1ecec;
+  background-color: #323539;
+}
+
+#contact .container .contact-form form textarea {
+  border-color: #e03a3a;
+  color: #f1ecec;
+  background-color: #323539;
+}
+
+#contact .container .contact-form form select {
+  border-color: #e03a3a;
+  color: #f1ecec;
+  background-color: #323539;
+}
+
+#contact .container .contact-form form input:focus {
+  border: #e03a3a;
+  border-color: #e03a3a;
+  -webkit-box-shadow: 0 0 0 0.2rem #e03a3a96;
+          box-shadow: 0 0 0 0.2rem #e03a3a96;
+}
+
+#contact .container .contact-form form textarea:focus {
+  border-color: #e03a3a;
+  -webkit-box-shadow: 0 0 0 0.2rem #e03a3a96;
+          box-shadow: 0 0 0 0.2rem #e03a3a96;
+}
+
+#contact .container .contact-form form select:focus {
+  border-color: #e03a3a;
+  -webkit-box-shadow: 0 0 0 0.2rem #e03a3a96;
+          box-shadow: 0 0 0 0.2rem #e03a3a96;
 }
 /*# sourceMappingURL=styles.css.map */
