--- a/styles.scss
+++ b/styles.scss
@@ -477,5 +477,82 @@ header {
   }
 }
 
+#contact {
+  padding-top: 9vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.75),
+  rgba(0, 0, 0, 0.75)), url(./images/contact-pexels.png) no-repeat center;
+  background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
 
+
+  .container {
+    flex-direction: column;
+    margin-top: 1.5rem;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    h4 {
+      @extend h4;
+    }
+    h5{
+      strong {
+        font-size: 1.7rem;
+      }
+      text-align: center;
+      margin-bottom: 1.5rem;
+    }
+    .underline {
+      margin-bottom: 1rem;
+    }
+
+    .contact-form {
+      background-color: rgba(187, 178, 178, 0.5) !important;
+      box-shadow: 2px 2px 10px #585858bb;
+      
+
+      form {
+        padding: 3rem;
+
+        input {
+          border-color: color(accent1);
+          color: color(textColor);
+          background-color: color(accent2);
+        }
+
+        textarea {
+          border-color: color(accent1);
+          color: color(textColor);
+          background-color: color(accent2);
+        }
+
+        select {
+          border-color: color(accent1);
+          color: color(textColor);
+          background-color: color(accent2);
+        }
+
+        input:focus {
+          border: color(accent1);
+          border-color: color(accent1);
+          box-shadow: 0 0 0 0.2rem #e03a3a96,;
+        }
+
+        textarea:focus {
+          border-color: color(accent1);
+          box-shadow: 0 0 0 0.2rem #e03a3a96;
+        }
+
+        select:focus {
+          border-color: color(accent1);
+          box-shadow: 0 0 0 0.2rem #e03a3a96,;
+        }
+      }
+    }
+
+  }
+}
 
