--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,5 @@
-@import "./config";
-@import "./media";
-
-
+@import './config';
+@import './media';
 
 * {
   margin: 0;
@@ -11,8 +9,9 @@
   font-size: 16px;
 }
 
-;
-
+html {
+  height: 100%;
+}
 
 body {
   font-family: 'Montserrat', sans-serif;
@@ -32,29 +31,22 @@ nav {
   height: 9vh;
   z-index: 2;
 
-
-  .brand {
+  .logo {
     max-height: 9vh;
     box-shadow: 2px 2px 20px 0px rgba(0, 0, 0, 0.5);
     border-radius: 8px;
     border: 2px color(accent1) solid;
-    margin: 20px 0;
-    position: relative;
+    margin: 0;
 
     a {
-      text-decoration: none;
-
-    }
-
-
-    h4 {
       font-family: 'Quicksand';
       letter-spacing: 1.5px;
-      padding: 0.2rem 0.3rem;
+      padding: 0.2rem;
       font-size: 1.8rem;
       font-weight: bolder;
       color: color(accent1);
       margin-bottom: 0;
+      text-decoration: none;
     }
   }
 
@@ -71,7 +63,6 @@ nav {
       transform: scale(1.1);
     }
 
-
     a {
       font-family: 'Quicksand';
       font-size: 1.2rem;
@@ -79,15 +70,11 @@ nav {
       letter-spacing: 2px;
       color: color(textColor);
       text-decoration: none;
-     
-
-
 
       &:hover {
         color: color(linkHover);
         text-shadow: $text-shadow;
       }
-
     }
 
     #contactLink {
@@ -106,35 +93,30 @@ nav {
           border-radius: 25px;
           border: 2px solid color(linkHover2);
           color: color(linkHover);
-          box-shadow: 10px 12px 16px -7px rgba(0,0,0,0.68);
+          box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
         }
       }
     }
   }
 }
 
-
-
 header {
-  min-height: 100vh;
+  min-height: 91vh;
   overflow: hidden;
 
-
-
-
-
   .jumbotron {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 0;
-    min-height: 100vh;
-    background:linear-gradient(rgba(0, 0, 0, 0.75),
-    rgba(0, 0, 0, 0.75)), url(./images/heropic.png) no-repeat center;
+    min-height: 91vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+      url(./images/heropic.png) no-repeat center;
     background-attachment: fixed;
     background-size: cover;
     padding: 0;
 
-
     .container {
-      padding-top: 9vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -148,25 +130,18 @@ header {
         text-transform: uppercase;
       }
 
-
       h1 {
         width: 60%;
         padding-left: 30px;
         align-self: flex-start;
-        font-family: 'Righteous', ;
-
-
+        // font-family: 'Righteous';
       }
-
 
       p {
         align-self: flex-start;
         text-align: center;
         padding-left: 30px;
-
-
       }
-
 
       a {
         text-decoration: none;
@@ -187,7 +162,7 @@ header {
 }
 
 .filler {
-  background: linear-gradient(to right, #131313, #303030,#131313);
+  background: linear-gradient(to right, #131313, #303030, #131313);
   color: color(textColor);
   display: flex;
   justify-content: center;
@@ -196,8 +171,7 @@ header {
   height: 40vh;
   margin: 0;
   box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
-  text-shadow: 5px 5px 6px rgb(0,0,0);
- 
+  text-shadow: 5px 5px 6px rgb(0, 0, 0);
 
   .container {
     display: flex;
@@ -205,26 +179,25 @@ header {
     align-items: center;
     flex-direction: column;
 
-    p{
-    font-style: italic;
-    font-family: 'Roboto';
-    font-weight: bold;
-    text-align: center;
-    font-size: 1.5rem;
-    } 
+    p {
+      font-style: italic;
+      font-family: 'Roboto';
+      font-weight: bold;
+      text-align: center;
+      font-size: 1.5rem;
+    }
 
     .blockquote-footer {
-    color: #f1ececa8;
-    font-size: 1.5rem;
+      color: #f1ececa8;
+      font-size: 1.5rem;
     }
   }
 }
 
-
 #about {
   padding-top: 9vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.75),
-      rgba(0, 0, 0, 0.75)), url(./images/section1bg.png) no-repeat center;
+  background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+    url(./images/section1bg.png) no-repeat center;
   background-attachment: fixed;
   background-size: cover;
   width: 100%;
@@ -234,11 +207,11 @@ header {
   padding-bottom: 9vh;
 
   .container {
-    
     margin-top: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 
     h4 {
       font-family: 'Quicksand';
@@ -251,10 +224,7 @@ header {
         font-size: 1em;
         color: color(accent1);
         text-transform: uppercase;
-       
       }
-
-
     }
 
     .underline {
@@ -265,34 +235,33 @@ header {
     }
 
     .about {
+      max-width: 80%;
       min-height: 200px;
       display: flex;
       flex-wrap: wrap;
       margin: 1.5rem 0;
-      box-shadow: 10px 12px 16px -7px rgba(0,0,0,0.68);
+      box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
 
       .about-img1 {
         width: 50%;
         background: url(./images/ourteam-pexels.png) no-repeat;
         background-position: center;
         background-size: cover;
-         }
+      }
 
       .about-img2 {
-      width: 50%;
-      background: url(./images/location-pexels.png) no-repeat;
-      background-position: center;
-      background-size: cover;
-        }
+        width: 50%;
+        background: url(./images/location-pexels.png) no-repeat;
+        background-position: center;
+        background-size: cover;
+      }
 
       .about-img3 {
-      width: 50%;
-      background: url(./images/pricing-pexels.png) no-repeat;
-      background-position: center;
-      background-size: cover;
-        }
-
-
+        width: 50%;
+        background: url(./images/pricing-pexels.png) no-repeat;
+        background-position: center;
+        background-size: cover;
+      }
 
       .about-text {
         width: 50%;
@@ -310,7 +279,6 @@ header {
           font-weight: bolder;
           color: color(accent1);
           font-family: 'Roboto';
-          border-bottom:thin double;
         }
 
         p {
@@ -321,19 +289,17 @@ header {
         .btn {
           margin-bottom: 10px;
           font-weight: 700;
-          color: color(linkHover2);
           border-radius: 25px;
           padding: 0.4rem 0.6rem;
           border: 2px solid color(accent1);
           transition: all 0.5s ease-in-out;
 
           span {
+            color: color(textColor);
             margin: 0 3px;
             display: inline-block;
             transition: all 0.5s ease-in-out;
           }
-        
-  
 
           &:hover {
             background-color: color(linkHover2);
@@ -341,35 +307,28 @@ header {
             border-radius: 25px;
             border: 2px solid color(linkHover2);
             color: color(linkHover);
-            box-shadow: 10px 12px 16px -7px rgba(0,0,0,0.68);
+            box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
 
             span {
               color: color(linkHover);
             }
-          
-    
           }
         }
-         
       }
-
     }
-
   }
 }
 
 #pricing {
   padding-top: 9vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.75),
-  rgba(0, 0, 0, 0.75)), url(./images/pricingbg-pexels.png) no-repeat center;
+  background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+    url(./images/pricingbg-pexels.png) no-repeat center;
   background-attachment: fixed;
   background-size: cover;
   width: 100%;
   display: flex;
   justify-content: center;
   min-height: 100vh;
-
-
 
   .container {
     flex-direction: column;
@@ -390,11 +349,11 @@ header {
 
       .price-card {
         position: relative;
-        background-color:rgba(180, 168, 168, 0.5);
+        background-color: rgba(180, 168, 168, 0.5);
         box-shadow: 0 0 10px #00000070;
         margin: 20px 20px;
         width: 100%;
-  
+
         text-shadow: $text-shadow;
         display: flex;
         flex-direction: column;
@@ -406,7 +365,7 @@ header {
         overflow: hidden;
 
         .pop {
-         width: 50%;
+          width: 50%;
           background-color: color(accent1);
           transform: rotate(40deg);
           padding: 10px 40px;
@@ -420,7 +379,7 @@ header {
         }
 
         .plan-name {
-          padding-top:  0.7rem;
+          padding-top: 0.7rem;
 
           h1 {
             margin-bottom: 0;
@@ -429,12 +388,9 @@ header {
           }
         }
 
-    
-
         .price {
-        
           p {
-            strong{
+            strong {
               font-size: 3rem;
             }
 
@@ -448,9 +404,9 @@ header {
 
         .description {
           margin-bottom: 1rem;
-           li {
-             list-style: none;
-           }
+          li {
+            list-style: none;
+          }
         }
 
         a {
@@ -462,7 +418,7 @@ header {
           border-radius: 1.5em;
           background-color: color(accent1);
           transition: 0.3s ease;
-          
+
           &:hover {
             transform: scale(1.05);
             background-color: color(linkHover2);
@@ -471,23 +427,24 @@ header {
         }
       }
     }
-  .popular {
-    background-color: rgba(187, 178, 178, 0.65) !important;
-  }
+    .popular {
+      background-color: rgba(187, 178, 178, 0.65) !important;
+    }
   }
 }
 
 #contact {
   padding-top: 9vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.75),
-  rgba(0, 0, 0, 0.75)), url(./images/contact-pexels.png) no-repeat center;
+  background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+    url(./images/contact-pexels.png) no-repeat center;
   background-attachment: fixed;
   background-size: cover;
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   min-height: 100vh;
-
+  padding-bottom: 9vh;
 
   .container {
     flex-direction: column;
@@ -495,24 +452,31 @@ header {
     display: flex;
     justify-content: center;
     padding: 20px;
+
     h4 {
       @extend h4;
     }
-    h5{
+
+    h5 {
       strong {
         font-size: 1.7rem;
       }
       text-align: center;
       margin-bottom: 1.5rem;
     }
+
+    p {
+      text-align: center;
+    }
+
     .underline {
+      width: 20%;
       margin-bottom: 1rem;
     }
 
     .contact-form {
       background-color: rgba(187, 178, 178, 0.5) !important;
       box-shadow: 2px 2px 10px #585858bb;
-      
 
       form {
         padding: 3rem;
@@ -538,7 +502,7 @@ header {
         input:focus {
           border: color(accent1);
           border-color: color(accent1);
-          box-shadow: 0 0 0 0.2rem #e03a3a96,;
+          box-shadow: 0 0 0 0.2rem #e03a3a96;
         }
 
         textarea:focus {
@@ -548,11 +512,38 @@ header {
 
         select:focus {
           border-color: color(accent1);
-          box-shadow: 0 0 0 0.2rem #e03a3a96,;
+          box-shadow: 0 0 0 0.2rem #e03a3a96;
         }
       }
     }
-
   }
 }
 
+#footer {
+  background: linear-gradient(to left, #131313, #303030);
+
+  .container-fluid {
+    height: 80vh;
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+
+    .map {
+      height: 100%;
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+
+      img {
+        object-fit: cover;
+        width: 100%;
+        min-height: 100%;
+        max-height: 100%;
+      }
+    }
+
+    .foot {
+      background: linear-gradient(to right, #131313, #303030, #131313);
+    }
+  }
+}
